<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.jonah.potatohead.MainActivity"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_weight="0.66">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="396dp"
                android:layout_below="@+id/relativeLayout2"
                android:layout_alignLeft="@+id/relativeLayout2"
                android:layout_alignStart="@+id/relativeLayout2">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/body"
                    android:id="@+id/imageView25"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/arms"
                    android:id="@+id/imageView31"
                    android:layout_centerVertical="true"
                    android:layout_alignLeft="@+id/imageView25"
                    android:layout_alignStart="@+id/imageView25" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/shoes"
                    android:id="@+id/imageView32"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/hat"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/imageView27" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/eyebrows"
                    android:id="@+id/imageView33"
                    android:layout_centerHorizontal="true"
                    android:layout_alignTop="@+id/imageView30"
                    android:layout_alignLeft="@+id/imageView25"
                    android:layout_alignStart="@+id/imageView25" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/eyes"
                    android:id="@+id/imageView28"
                    android:layout_centerVertical="true"
                    android:layout_alignLeft="@+id/imageView25"
                    android:layout_alignStart="@+id/imageView25" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/glasses"
                    android:id="@+id/imageView30"
                    android:layout_alignParentTop="true"
                    android:layout_alignLeft="@+id/imageView25"
                    android:layout_alignStart="@+id/imageView25"
                    android:layout_marginTop="9dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/nose"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/imageView26" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/mustache"
                    android:id="@+id/imageView29"
                    android:layout_alignParentTop="true"
                    android:layout_alignLeft="@+id/imageView25"
                    android:layout_alignStart="@+id/imageView25" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ears"
                    android:id="@+id/imageView34"
                    android:layout_alignParentTop="true"
                    android:layout_alignLeft="@+id/imageView25"
                    android:layout_alignStart="@+id/imageView25" />

            </RelativeLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="261dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="39dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <CheckBox
                        android:text="@string/armsImgView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBoxArms"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed" />

                    <CheckBox
                        android:text="@string/earsImgView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBoxEars"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed" />

                    <CheckBox
                        android:text="@string/eyebrowsImgView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBoxNose"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed" />

                    <CheckBox
                        android:text="@string/eyesImgView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBoxEyes"
                        android:textAlignment="textStart"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed" />

                    <CheckBox
                        android:text="@string/mouthImgView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBoxMouth"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <CheckBox
                        android:text="@string/glassesImgView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBoxGlasses"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed" />

                    <CheckBox
                        android:text="@string/shoesImgView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBoxShoes"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed" />

                    <CheckBox
                        android:text="@string/hatImgView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBoxHat"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed" />

                    <CheckBox
                        android:text="@string/mustacheImgView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBoxMustache"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed" />

                    <CheckBox
                        android:text="@string/noseImgView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBoxNose"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed" />
                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
